# rar-rs

./: Cargo.toml  LICENSE  NOTICE  README.md
src/: archive.rs  compression.rs  constants.rs  encryption.rs  error.rs  headers.rs  lib.rs  vint.rs
src/codec/: bitstream.rs  decoder.rs  encoder.rs  filters.rs  huffman.rs  lz_match.rs  mod.rs  tables.rs  window.rs
src/rar4/: constants.rs  decoder.rs  headers.rs  mod.rs
