[package]
name = "rar5"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust RAR5 archive library — create, read, and extract RAR5 archives with native LZSS+Huffman compression"
license = "BSD-2-Clause"
repository = "https://codeberg.org/librar/rar-rs"

[[bin]]
name = "rar"
path = "src/bin/rar.rs"

[[bin]]
name = "unrar"
path = "src/bin/unrar.rs"

[dependencies]
crc32fast = "1"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = "0.12"

[dev-dependencies]
tempfile = "3"
